--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ web/sites/*/files
 
 # Ignore configuration files that may contain sensitive information.
 web/sites/*/settings.local.php
+
+# Ignore docker's data directory
+/docker/data/*
