--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,45 @@
-phpfpm:
-    command: 'php-fpm --allow-to-run-as-root'
-    build: docker/images/php
-    volumes: ['./docker/conf/fpm.conf:/usr/local/etc/php-fpm.conf', './:/var/platform', './docker/conf/php.ini:/usr/local/etc/php/conf.d/local.ini']
-    links: [mariadb]
-    environment: { PLATFORM_DOCKER: bsp-starter, PHP_IDE_CONFIG: serverName=bsp-starter.platform }
-mariadb:
-    command: 'mysqld --user=root --verbose'
-    image: mariadb
-    ports: ['3306']
-    volumes: ['./docker/data:/var/lib/mysql', './docker/conf/mysql.cnf:/etc/mysql/my.cnf']
-    environment: { MYSQL_DATABASE: data, MYSQL_USER: mysql, MYSQL_PASSWORD: mysql, MYSQL_ALLOW_EMPTY_PASSWORD: 'yes', MYSQL_ROOT_PASSWORD: 'root,' }
-nginx:
-    image: 'nginx:1.9.0'
-    volumes: ['./docker/conf/nginx.conf:/etc/nginx/conf.d/default.conf', './:/var/platform', './docker/ssl/nginx.crt:/etc/nginx/ssl/nginx.crt', './docker/ssl/nginx.key:/etc/nginx/ssl/nginx.key']
-    ports: ['80', '443']
-    links: [phpfpm]
-    environment: { VIRTUAL_HOST: bsp-starter.platform, PLATFORM_DOCKER: bsp-starter }
+version: '2'
+services:
+  web:
+    # keopx/apache-php available tags: latest, 7.0, 5.6.
+    image: keopx/apache-php:7.0
+    ports:
+      # 8008 works without varnish.
+      - "80:80"
+      - "443:443"
+    links:
+      - mysql
+      - mail
+    volumes:
+      # at this time, docker-lamp has to be in <root>/scripts/docker-lamp
+      - .:/var/www # Data.
+      - ./docker-lamp/config/vhosts:/etc/apache2/sites-enabled
+      # php.ini for php 7.0 and remove environment varibles.
+      - ./docker-lamp/config/php/7.0/php.ini:/etc/php/7.0/apache2/php.ini
+      # Xdebug for php 7.0
+      - ./docker-lamp/config/php/xdebug.ini:/etc/php/7.0/apache2/conf.d/20-xdebug.ini
+      # OpCache only for php 7.0
+      - ./docker-lamp/config/php/opcache-recommended.ini:/etc/php/7.0/apache2/conf.d/10-opcache.ini
+    working_dir: /var/www
+    environment:
+      - SERVER_NAME=dev.local
+      - DOCROOT=/var/www/web
+  mysql:
+    # keopx/mysql available tags: latest, 5.7, 5.6, 5.5.
+    image: keopx/mysql:5.6
+    ports:
+      - "3306:3306"
+    volumes:
+      - ./docker-lamp/data/database:/var/lib/mysql
+      ## Custom setup for MySQL
+      # - ./config/mysql/my.cnf:/etc/mysql/my.cnf
+    environment:
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=dev
+      - MYSQL_USER=mysql
+      - MYSQL_PASSWORD=mysql
+  mail:
+    image: mailhog/mailhog
+    ports:
+      - "8025:8025"
+      - "1025:1025"
