Added back phpmyadmin

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,3 +43,11 @@ services:
     ports:
       - "8025:8025"
       - "1025:1025"
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    ports:
+      - "8080:80"
+    links:
+      - mysql
+    environment:
+      - PMA_HOST=mysql
